--- a/技术部任务二/html/任务二.html
+++ b/技术部任务二/html/任务二.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>任务二</title>
-    <link rel="stylesheet"type="text/css"href="../css/reset.css">
-    <link rel="stylesheet"type="text/css"href="../css/common.css">
+    <link rel="stylesheet" type="text/css" href="../css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../css/common.css">
 </head>
 <body>
 <div class="middle"><!--我是居中容器-->
@@ -14,9 +14,12 @@
     </div>
     <div class="text"><!--我是文本-->
         <span>1.块级元素独占一行，默认为父元素宽度，设置width仍然换行，可设置margin，padding；<br>
-                 行内元素设置width，height无效，宽度由内容决定，默认同行排列，margin，padding上下无效左右有效<br></span>
-        <span>2.行内元素：span；strong；em；br；img；input；label；select；textarea；cite<br></span>
-        <span>3.块级元素：div;p;form;ul;li;ol;dl;adress;fieldset;hr;menu;table<br></span>
+                 行内元素设置width，height无效，宽度由内容决定，默认同行排列，margin，padding上下无效左右有效<br>
+		</span>
+        <span>2.行内元素：span；strong；em；br；img；input；label；select；textarea；cite<br>
+		</span>
+        <span>3.块级元素：div;p;form;ul;li;ol;dl;adress;fieldset;hr;menu;table<br>
+		</span>
     <div class="triangle-up"></div><!--我是正三角-->
     <div class="triangle-down"></div><!--我是倒三角-->
     </div>
