--- a/技术部任务四/html/index.html
+++ b/技术部任务四/html/index.html
@@ -27,8 +27,10 @@
             </div>
             <i>About technologe about technologe<br>
                 about technologe<br></i>
+            <i>
             <div class="banner-text-part3">700<br>
             </div>
+            </i>
             <div class="banner-text-part4">
                 <span class="banner-text-part4-left">3.2
                 </span>
@@ -72,27 +74,32 @@
     <div class="example">
         <div class="example-left">
             <div class="example-left-text1">
+                <i>
                 <span class="the">THE
                 </span>
+                </i>
                 <span class="tec">TECHNOLOGE<br>
                 OF FRONT<br>
                 前端技术领域<br>
                 </span>
             </div>
-            <div class="example1">
-                <img src="../images/example1.png" alt="example" height="288" width="167" align="none">
-            </div>
-            <span class="example-left-body">
-                <p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前。
-                </p>
+
+            <div class="example-left-body">
+                <div class="example-right11"></div>
+                <div class="example1">
+                    <img src="../images/example1.png" alt="example" height="288" width="167" align="none">
+                </div>
+                <span class="example-left-body-front">前
+                </span>
+                端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前。
                 <p>端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端。
                 </p>
                 <p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端。
                 </p>
-            </span>
+            </div>
         </div>
         <div class="example-right1">
-            <img src="../images/example2.png" alt="example" width="458" height="257">
+            <img src="../images/example2.png" alt="example" width="458" height="257" align="all">
             <div class="example-right1-text">
                 <div class="line1"></div>
                 <div class="example-right1-text1">前端技术
@@ -106,17 +113,17 @@
         <div class="example-right2">
             <div class="examle-right2-list">
             <div class="triangle"></div>
-            <span class="example-right2-text">前端前端前端前端前端前端 ....................前端
+            <span class="example-right2-text">前端前端前端前端前端前端前端前端前端前端前端前端 ....................前端
             </span>
             </div>
             <div class="examle-right2-list">
                 <div class="triangle"></div>
-                <span class="example-right2-text">前端前端前端前端前端前端 ....................前端
+                <span class="example-right2-text">前端前端前端前端前端前端前端前端前端前端前端前端 ....................前端
             </span>
             </div>
             <div class="examle-right2-list">
                 <div class="triangle"></div>
-                <span class="example-right2-text">前端前端前端前端前端前端 ....................前端
+                <span class="example-right2-text">前端前端前端前端前端前端前端前端前端前端前端前端 ....................前端
             </span>
             </div>
             <div class="example-right2-red">
@@ -132,11 +139,11 @@
                 </div>
             </div>
             <div class="example-right2-text2">
-                <span class="symbol">"
-                </span>
-                world hello worldhello world hello worldhello world hello worldhello world hello worldhello world hello worldhello world
-                <span class="symbol">"
-                </span>
+                <div class="symbol">"
+                </div>
+                &nbsp;world hello world hello world hello world hello world hello world hello world hello world hello world hello world hello world
+                <div class="symbol">"
+                </div>
             </div>
         </div>
     </div><!--举例部分-->
