--- a/use/html/subject.html
+++ b/use/html/subject.html
@@ -11,11 +11,11 @@
         <div class="publish-container"clear:float>
             <div class="header-logo"></div>
             <ul class="header-nev">
-                <li class="item">Our Story</li>
-                <li class="item">Menu</li>
-                <li class="item">Reservations</li>
-                <li class="item">News</li>
-                <li class="item">Rviews</li>
+                <li class="item"><a href="#"></a>Our Story</a></li>
+                <li class="item"><a href="subject.html#index-list">Menu</a></li>
+                <li class="item"><a href="Reservations.html">Reservations</a></li>
+                <li class="item"<a href="#"><a href="#">News</a></li>
+                <li class="item"><a href="#">Reviews</a></li>
             </ul>
         </div>
     </div>
@@ -35,7 +35,7 @@
         </div>
 
     </div>
-    <div class="index-list">
+    <div class="index-list" id="index-list">
         <div class="index-line"></div>
         <div class="container" >
             <div class="menu">The Menu</div>
@@ -143,49 +143,24 @@
                 <ul class="clearfloat">
                     <li class="food-item">
                          <img class="banner" src="../images/index-pancel-img1.png">
-                         <div class="food-name">Fugiat nulla sint</div>
+                         <a href="Reservations.html" class="food-name">Fugiat nulla sint</a>
                          <div class="price">$30</div>
-                         <div class="star-bar">
-                              <span class="star"></span>
-                              <span class="star"></span>
-                              <span class="star"></span>
-                              <span class="star nostar"></span>
-                         </div>
                     </li>
                     <li class="food-item">
                         <img class="banner" src="../images/index-pancel-img2.png">
-                        <div class="food-name">Daute irure dolor</div>
+                        <a href="Reservations.html" class="food-name">Daute irure dolor</a>
                         <div class="price">$24</div>
-                        <div class="star-bar">
-                            <span class="star"></span>
-                            <span class="star"></span>
-                            <span class="star"></span>
-                            <span class="star nostar"></span>
-                        </div>
                     </li>
                     <li class="food-item">
                         <img class="banner" src="../images/index-pancel-img3.png">
-                        <div class="food-name">Officia deserunt mollit</div>
+                        <a href="Reservations.html" class="food-name">Officia deserunt mollit</a>
                         <div class="price">$60</div>
-                        <div class="star-bar">
-                            <span class="star"></span>
-                            <span class="star"></span>
-                            <span class="star"></span>
-                            <span class="star nostar"></span>
-                        </div>
                     </li>
 
                     <li class="food-item1">
-
                         <img class="banner" src="../images/index-pancel-img4.png">
-                        <div class="food-name">Officia deserunt mollit</div>
+                        <a href="Reservations.html" class="food-name">Officia deserunt mollit</a>
                         <div class="price">$17</div>
-                        <div class="star-bar">
-                            <span class="star"></span>
-                            <span class="star"></span>
-                            <span class="star"></span>
-                            <span class="star nostar"></span>
-                        </div>
                     </li>
                 </ul>
             </div>
